[gd_scene load_steps=61 format=3 uid="uid://ctdidc2767oli"]

[ext_resource type="Script" path="res://scripts/characterScripts/sheep.gd" id="1_08u5m"]
[ext_resource type="Texture2D" uid="uid://7uk4ji781hgq" path="res://assets/sprites/sheep/Sheep-Base.png" id="2_1n41h"]
[ext_resource type="Texture2D" uid="uid://v8jvkjqe8f8u" path="res://assets/sprites/sheep/Sheep-WalkDown.png" id="2_tw5op"]
[ext_resource type="Texture2D" uid="uid://c0771un57hyie" path="res://assets/sprites/sheep/Sheep-WalkLeft.png" id="3_ta7cr"]
[ext_resource type="Texture2D" uid="uid://nrmxedkw0b38" path="res://assets/sprites/sheep/Sheep-WalkRight.png" id="4_nftt3"]
[ext_resource type="Texture2D" uid="uid://dcfuatnists5s" path="res://assets/sprites/sheep/Sheep-WalkUp.png" id="5_tcas7"]
[ext_resource type="PackedScene" uid="uid://sma017lam2m4" path="res://scenes/characters/sword.tscn" id="6_h6xdu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_646hh"]
atlas = ExtResource("2_1n41h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ihs"]
atlas = ExtResource("2_1n41h")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aec6"]
atlas = ExtResource("2_1n41h")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0sij"]
atlas = ExtResource("2_1n41h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lox1e"]
atlas = ExtResource("2_tw5op")
region = Rect2(0, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iw3t"]
atlas = ExtResource("2_tw5op")
region = Rect2(32, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhlt0"]
atlas = ExtResource("2_tw5op")
region = Rect2(64, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yip2"]
atlas = ExtResource("2_tw5op")
region = Rect2(96, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_thybn"]
atlas = ExtResource("2_tw5op")
region = Rect2(0, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pageh"]
atlas = ExtResource("2_tw5op")
region = Rect2(32, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsgvu"]
atlas = ExtResource("2_tw5op")
region = Rect2(64, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6owps"]
atlas = ExtResource("2_tw5op")
region = Rect2(96, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_py1u7"]
atlas = ExtResource("3_ta7cr")
region = Rect2(0, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lybxb"]
atlas = ExtResource("3_ta7cr")
region = Rect2(32, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8wnq"]
atlas = ExtResource("3_ta7cr")
region = Rect2(64, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3m7y"]
atlas = ExtResource("3_ta7cr")
region = Rect2(96, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xag8o"]
atlas = ExtResource("3_ta7cr")
region = Rect2(0, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n51k"]
atlas = ExtResource("3_ta7cr")
region = Rect2(32, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0l6o"]
atlas = ExtResource("3_ta7cr")
region = Rect2(64, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvf70"]
atlas = ExtResource("3_ta7cr")
region = Rect2(96, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmh37"]
atlas = ExtResource("4_nftt3")
region = Rect2(0, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0j4l"]
atlas = ExtResource("4_nftt3")
region = Rect2(32, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6r6m"]
atlas = ExtResource("4_nftt3")
region = Rect2(64, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q2fr"]
atlas = ExtResource("4_nftt3")
region = Rect2(96, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_y20mk"]
atlas = ExtResource("4_nftt3")
region = Rect2(0, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_to48h"]
atlas = ExtResource("4_nftt3")
region = Rect2(32, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_sow4y"]
atlas = ExtResource("4_nftt3")
region = Rect2(64, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7rwr"]
atlas = ExtResource("4_nftt3")
region = Rect2(96, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k66p"]
atlas = ExtResource("5_tcas7")
region = Rect2(0, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k86xu"]
atlas = ExtResource("5_tcas7")
region = Rect2(32, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cjeu"]
atlas = ExtResource("5_tcas7")
region = Rect2(64, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ap3d"]
atlas = ExtResource("5_tcas7")
region = Rect2(96, 2, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg8xv"]
atlas = ExtResource("5_tcas7")
region = Rect2(0, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qtha"]
atlas = ExtResource("5_tcas7")
region = Rect2(32, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3gjl"]
atlas = ExtResource("5_tcas7")
region = Rect2(64, 33, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mcd3"]
atlas = ExtResource("5_tcas7")
region = Rect2(96, 33, 32, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_5tiih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_646hh")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1ihs")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aec6")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0sij")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lox1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iw3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhlt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yip2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thybn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pageh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsgvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6owps")
}],
"loop": true,
"name": &"WalkDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_py1u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lybxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8wnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3m7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xag8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n51k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0l6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvf70")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmh37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0j4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6r6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q2fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y20mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to48h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sow4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7rwr")
}],
"loop": true,
"name": &"WalkRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k66p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k86xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cjeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ap3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg8xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qtha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3gjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mcd3")
}],
"loop": true,
"name": &"WalkUp",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4ac7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.90946]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkDown"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:show_behind_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ud3ln"]
resource_name = "attackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-3.37372, -2.35619, -1.27933]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, -5), Vector2(0, -3), Vector2(-6, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkDown"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:show_behind_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, false]
}

[sub_resource type="Animation" id="Animation_g051y"]
resource_name = "attackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-7.225, -13.375), Vector2(-9.477, -7.705), Vector2(-6.3, -2.035)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0872665, -0.785398, -1.65806]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkLeft"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:show_behind_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}

[sub_resource type="Animation" id="Animation_xbxyv"]
resource_name = "attackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(9, -13.375), Vector2(9.5, -7.193), Vector2(7.29, -1.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.48353, 2.35619, 3.09796]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkRight"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 0]
}

[sub_resource type="Animation" id="Animation_bjexp"]
resource_name = "attackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6, -14), Vector2(0, -17.265), Vector2(6, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.116937, 0.785398, 1.62839]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkUp"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:show_behind_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="Animation" id="Animation_lvj6x"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qxx4v"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8fnb7"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wkdrm"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kwi5q"]
resource_name = "walkDown"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkDown"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_23vkb"]
resource_name = "walkLeft"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wfx1w"]
resource_name = "walkRight"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_4saca"]
resource_name = "walkUp"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkUp"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoegu"]
_data = {
"RESET": SubResource("Animation_4ac7j"),
"attackDown": SubResource("Animation_ud3ln"),
"attackLeft": SubResource("Animation_g051y"),
"attackRight": SubResource("Animation_xbxyv"),
"attackUp": SubResource("Animation_bjexp"),
"down": SubResource("Animation_lvj6x"),
"left": SubResource("Animation_qxx4v"),
"right": SubResource("Animation_8fnb7"),
"up": SubResource("Animation_wkdrm"),
"walkDown": SubResource("Animation_kwi5q"),
"walkLeft": SubResource("Animation_23vkb"),
"walkRight": SubResource("Animation_wfx1w"),
"walkUp": SubResource("Animation_4saca")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8vtdn"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_db8ql"]
radius = 6.0

[node name="Sheep" type="CharacterBody2D"]
collision_layer = 9
script = ExtResource("1_08u5m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_5tiih")
animation = &"WalkDown"
frame = 1
speed_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hoegu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_8vtdn")

[node name="Head" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_db8ql")

[node name="Weapon" type="Node2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(6, -5)
rotation = 2.90946

[node name="sword" parent="Weapon" instance=ExtResource("6_h6xdu")]
collision_layer = 2

[node name="hit_stun" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.16448, 0.655256, 0.246913, 1)
offset_left = -7.0
offset_top = -30.0
offset_right = 133.0
offset_bottom = 10.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="hit_stun" to="." method="_on_hit_stun_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
